# AnaliNet

./: .env  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/app/: main.py
backend/app/ai/: diagnostic_assistant.py  eda_entrenamiento.py  predictive_analysis.py  process_optimization.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  equipment.py  laboratory.py  patients.py  person.py  reports.py  test_types.py  tests.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/initial_data/: lipid_profile.py
backend/app/finance/: cost_management.py
backend/app/inventory/: reagent_management.py
backend/app/models/: auth.py  biochemist.py  equipment.py  laboratory.py  patient.py  person.py  printers.py  report.py  test.py  test_result.py  test_types.py
backend/app/schemas/: auth.py  equipment.py  laboratory.py  patient.py  person.py  reports.py  test.py  test_result.py  test_types.py
backend/app/services/: anomaly_detection.py  equipment_interface.py  lipid_evaluator.py  report_generator.py  result_handler.py  result_processor.py
backend/scripts/: init_db.sh.tmp
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Patients.tsx  Results.tsx  (+1 more)
(+22 files in other folders)
